# geemap_docker

./: Dockerfile  README.md  docker-compose.test.yml  install_dependencies.sh  pyproject.toml  requirements.txt
buildtest/: Dockerfile  docker-compose.test.yml
latest/: Dockerfile
tests/: geemap_test.py  run_tests.sh  test_geemap.py
v0.8.0/: Dockerfile
