[tool.poetry]
name = "geemap_docker_light"
version = "1.0.0"
description = ""
authors = ["batuhankavlak4@gmail.com"]

[tool.poetry.dependencies]
python = ">=3.8,<3.9"
jupyter = "1.0.0"
jupyterlab = "3.4.3"
numpy = "1.23.1"
scipy = "1.8.1"
Pillow = "9.3.0"
matplotlib = "3.5.2"
folium = "0.12.1"
fiona = "1.8.21"
shapely = "1.8.2"
geopandas = "0.11.0"
rasterio = "1.3.0"
tifffile = "2022.5.4"
branca = "0.3.1"
geemap = "0.20.0"
google-api-python-client = "1.12.8"
pandas = "1.4.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"